# ScholarTrace

./: .env.example  .gitignore  README.md  README_CN.md  constraints-dev.txt  pyproject.toml  run_scholartrace_mcp_debug.sh  run_scholartrace_mcp_sse.sh  status_scholartrace_mcp_debug.sh  status_scholartrace_mcp_sse.sh  stop_scholartrace_mcp_debug.sh  stop_scholartrace_mcp_sse.sh
docs/: ScholarTrace.md
docs/architecture/: pipeline_flow.md
docs/examples/: sycophancy_affective_hallucination_research_brief.md
docs/plans/: 2026-04-16-scholartrace-design.md  2026-04-16-scholartrace-implementation-plan.md  2026-04-17-mcp-product-reshape-design.md  2026-04-17-mcp-product-reshape.md  2026-04-17-scholartrace-operationalization.md  2026-04-22-mcp-pipeline-optimization.md
examples/: glm_scholar_search.py  mcp_query_simulation.py
scholartrace/: __init__.py  config.py  environment_check.py  environment_check_cli.py  main.py
scholartrace/api/: contracts.py  (+4 more)
scripts/: check_environment.py  repair_scholartrace_db.py  scholartrace-mcp.service  stress_test_model_paths.py  stress_test_model_pool.py  stress_test_two_stage.py  verify_scholartrace.py
tests/: test_connectors.py  test_dedup.py  test_deepxiv_agent.py  test_deepxiv_runtime.py  test_docs_readme.py  test_e2e.py  test_environment_check.py  test_examples_glm_search.py  test_fulltext.py  test_fulltext_contract.py  test_mcp_server.py  test_ops_scripts.py  test_prompt_budget.py  test_ranking.py  test_rest_api.py  test_retrieval.py  test_runtime_hardening.py  test_storage.py  test_theme_parser.py  test_two_stage_pipeline.py
(+28 files in other folders)
